Started a menu page but a few errors still, and trying to add a nav bar but still not working :(

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,6 +1,6 @@
 <div class="navbar">
     <a href="/" class="active">Home</a>
-    <a href="/Menu" class="active">Movies</a>
-    <a href="/Offers" class="active">About</a>
-    <a href="/Stores" class="active">Contact</a>
+    <a href="/Menu" class="active">Menu</a>
+    <a href="/Offers" class="active">Offers</a>
+    <a href="/Stores" class="active">Stores</a>
 </div>
