--- a/templates/footer.html
+++ b/templates/footer.html
@@ -10,9 +10,9 @@
         <footer>
             <ul class="list-inline">
                 <li class="list-inline-item"><a href="/">Home</a></li>
-                <li class="list-inline-item"><a href="/movies">Movies</a></li>
-                <li class="list-inline-item"><a href="/about">About</a></li>
-                <li class="list-inline-item"><a href="/contact">Contact</a></li>
+                <li class="list-inline-item"><a href="/Offers">Offers</a></li>
+                <li class="list-inline-item"><a href="/Menu">Menu</a></li>
+                <li class="list-inline-item"><a href="/Stores">Contact</a></li>
 
             </ul>
             <p class="copyright">Danial Ghobrial © 2023</p>
