fixed small errors and connected data to my site

--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -35,6 +35,6 @@ body {
 
 /* Active navbar link */
 .navbar a.active {
-  background-color: #ffc72c;
+  background-color: #2cc3ff;
   color: #fff;
 }
