--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,6 +1,6 @@
 <div class="navbar">
     <a href="/" class="active">Home</a>
-    <a href="/Menu" class="active">Menu</a>
-    <a href="/Offers" class="active">Offers</a>
-    <a href="/Stores" class="active">Stores</a>
+    <a href="/menu" class="active">Menu</a>
+    <a href="/offers" class="active">Offers</a>
+    <a href="/stores" class="active">Stores</a>
 </div>
