--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,4 +1,6 @@
- {% extends "layout.html" %}
+{% extends "layout.html" %}
 {% block content %}
-<h2>{{Pizzas}}</h2><p>{{Pizzas[1]}}</p><p>{{Pizzas[2]}}</p>
+{% for item in results%}
+   <h2><a href="/pizza/{{item[0]}}">{{item[1]}}</a></h2>
+{% endfor %}
 {% endblock %}
