--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,6 +1,10 @@
 {% extends "layout.html" %}
 {% block content %}
+<div class="grid-container">
 {% for item in results%}
-   <h2><a href="/pizza/{{item[0]}}">{{item[1]}}</a></h2>
-{% endfor %}
+
+   <a href="/pizza/{{item[0]}}"><img src="{{ item[3] }}">
+   
+      {% endfor %}
+   </div>   
 {% endblock %}
