fixed login system as there was an issue with the layout.hmtl

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,6 +1,7 @@
 <div class="navbar"> 
     <a href="/" class="active">Home</a>
     <a href="/menu" class="active">Menu</a>
+    <a href="/login" class="active">Log In</a>
     <a href="/offers" class="active">Offers</a>
     <a href="/stores" class="active">Stores</a>
 </div>
