--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,4 +18,15 @@
             {% include "footer.html" %}
         </footer>
     </body>
+
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    
+    <ul>
+        {% for message in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
 </html>
