Worked on login

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
-<h1>Login</h1>
-<!-- A form to login with -->
-<!-- POST to the LOGIN route this is set by the action value -->
+<h2>Before we order lets get some of your details! If Your a first time user Please <a href="/signup">Sign Up </a>First!</h1>
+
 <form action="/login" method="post">
     <label for="username">Username</label>
     <input type="text" name="username">
