--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,6 +8,8 @@
     <input type="text" name="username">
     <label for="password">Password</label>
     <input type="password" name="password">
+    <label for="adress">Adress</label>
+    <input type="text" name="adress">
     <button type="submit">Signup</button>
 </form>
 {% endblock %}
