--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,7 +1,9 @@
-<div class="navbar"> 
+<div class="navbar">
+    {% if user not in session %}
     <a href="/" class="active">Home</a>
     <a href="/menu" class="active">Menu</a>
     <a href="/offers" class="active">Offers</a>
     <a href="/stores" class="active">Stores</a>
-    <a href="/login" class="active">Order Now!</a>
+    <a href="/checkout" class="img"><img src="/static/Images/checkout.png" alt="checkout"></a>
+    {% endif %}
 </div>
