--- a/templates/pizza.html
+++ b/templates/pizza.html
@@ -14,7 +14,7 @@
       <button>Add To Cart</button>
     </form>
   </div>
-
+  <h1>Your Cart:</h1>
   {% for item in session[('cart')]%}
   <h1>{{item[1]}}</h1>
 
