--- a/templates/footer.html
+++ b/templates/footer.html
@@ -7,16 +7,16 @@
 
 <body>
     <div class="footer-basic">
-        <footer>
+        <footer> 
             <ul class="list-inline">
-                <!--- <li class="list-inline-item"><a href="/">Home</a></li>
+           <!--     <li class="list-inline-item"><a href="/">Home</a></li>
                 <li class="list-inline-item"><a href="/Offers">Offers</a></li>
                 <li class="list-inline-item"><a href="/Menu">Menu</a></li>
-                <li class="list-inline-item"><a href="/Stores">Contact</a></li>
+                <li class="list-inline-item"><a href="/Stores">Contact</a></li> -->
 
             </ul> 
             <p class="copyright">Danial Ghobrial © 2023</p>
-        </footer>--->
+        </footer>
     </div>
 </body>
 
