--- a/templates/menuout.html
+++ b/templates/menuout.html
@@ -3,7 +3,7 @@
 <div class="grid-container">
 {% for item in results%}
 
-   <a href="/pizza/{{item[0]}}"><img src="{{ item[3] }}">
+   <a href="/pizzaout/{{item[0]}}"><img src="{{ item[3] }}">
    </a>
       {% endfor %}
    </div>   
