--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -127,3 +127,12 @@ input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focu
   outline: none;
 }
 
+.pizzapage {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+}
+
+.secondgrid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
