--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,9 +1,14 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="grid-container">
+<div class="gridmenu">
 {% for item in results%}
 
    <a href="/pizza/{{item[0]}}"><img src="{{ item[3] }}">
+      <form action="/cart" method="post">
+         <input type="hidden" name="id" value="{{ item[0] }}">
+         <input type="hidden" name="name" value="{{ item[1] }}">
+         <button>Add To Cart</button>
+     </form>
    </a>
       {% endfor %}
    </div>   
