--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -143,7 +143,20 @@ input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focu
 
 .gridmenu > div {
   background-color: rgba(255, 255, 255, 0.8);
-  border: 1px solid black;
   text-align: center;
   font-size: 30px;
+}
+
+.middleimage {
+  margin: auto;
+}
+
+.menuform {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
