--- a/templates/menu.html
+++ b/templates/menu.html
@@ -2,14 +2,16 @@
 {% block content %}
 <div class="gridmenu">
 {% for item in results%}
-
+<div class="middleimage">
    <a href="/pizza/{{item[0]}}"><img src="{{ item[3] }}">
-      <form action="/cart" method="post">
+   
+      <form class="menuform" action="/cart" method="post">
          <input type="hidden" name="id" value="{{ item[0] }}">
          <input type="hidden" name="name" value="{{ item[1] }}">
          <button>Add To Cart</button>
      </form>
-   </a>
+    </a>
+   </div>
       {% endfor %}
    </div>   
 {% endblock %}
