--- a/templates/menu.html
+++ b/templates/menu.html
@@ -9,6 +9,9 @@
          <input type="hidden" name="id" value="{{ item[0] }}">
          <input type="hidden" name="name" value="{{ item[1] }}">
          <button>Add To Cart</button>
+         <div class="middletext">
+         <h2><b>{{item[1]}}</b></h2>
+      </div>
      </form>
     </a>
    </div>
