--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,15 +1,13 @@
-<div class="navbar">
+<ul class="topnav">
     {% if 'user' not in session %}
-    <a href="/" class="active">Home</a>
-    <a href="/menuout" class="active">Menu</a>
-    <a href="/offers" class="active">Offers</a>
-    <a href="/stores" class="active">Stores</a>
-    <a href="/login" class="active">Order Now</a>
+    <li><a class="active" href="/">Home</a></li>
+    <li><a href="/menuout">Menu</a></li>
+    <li><a href="/Offers">Offers</a></li>
     {% else %}
-    <a href="/" class="active">Home</a>
-    <a href="/menu" class="active">Menu</a>
-    <a href="/offers" class="active">Offers</a>
-    <a href="/stores" class="active">Stores</a>
-    <a href="/checkout" class="img"><img src="/static/Images/checkout.png" alt="checkout"></a>
+    <li><a class="active" href="/">Home</a></li>
+    <li><a href="/menu">Menu</a></li>
+    <li><a href="/Offers">Offers</a></li>
+    <li><a href="/stores">Stores</a></li>
+    <li class="right"><a href="/checkout"><img src="/static/Images/checkout.png" alt="checkout"></a></li>
     {% endif %}
-</div>
+</ul>
