--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -13,7 +13,7 @@ ul.topnav {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow: auto;
   background-color: #333;
 }
 
@@ -29,9 +29,15 @@ ul.topnav li a {
 
 ul.topnav li a:hover:not(.active) {background-color: #111;}
 
-ul.topnav li a.active {background-color: #04AA6D;}
+ul.topnav li a.active {background-color: #04AA6D;
+}
 
 ul.topnav li.right {float: right;}
+
+ul.topnav img {
+  height: 24px;
+  padding: 0%;
+}
 
 /* Navbar */
 .navbar {
@@ -147,7 +153,7 @@ input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focu
 
 .pizzapage {
   display: grid;
-  grid-template-columns: 2fr 1fr 2fr;
+  grid-template-columns: 2fr 1fr 3fr;
   width: 100%;
 }
  
@@ -187,7 +193,7 @@ input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focu
 
 .card {
   /* Add shadows to create the "card" effect */
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 1px 0px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
 }
 
@@ -199,8 +205,14 @@ input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focu
 /* Add some padding inside the card container */
 .cardcontainer {
   padding: 2px 16px;
+  width: auto;
+  height: 500px;
 }
 
 .middletext {
   color: #333;
+}
+
+.yourcart {
+  text-align: center;
 }
