--- a/templates/menu.html
+++ b/templates/menu.html
@@ -4,15 +4,16 @@
 {% for item in results%}
 <div class="middleimage">
    <a href="/pizza/{{item[0]}}"><img src="{{ item[3] }}">
-   
-      <form class="menuform" action="/cart" method="post">
+
+      <form class="menuform" action="/menucart" method="post">
          <input type="hidden" name="id" value="{{ item[0] }}">
          <input type="hidden" name="name" value="{{ item[1] }}">
-         <button>Add To Cart</button>
          <div class="middletext">
-         <h2><b>{{item[1]}}</b></h2>
+         <a><b>{{item[1]}}</b></a>
       </div>
+      <button>Add To Cart</button>
      </form>
+     
     </a>
    </div>
       {% endfor %}
