--- a/templates/nav.html
+++ b/templates/nav.html
@@ -2,11 +2,11 @@
     {% if 'user' not in session %}
     <li><a class="active" href="/">Home</a></li>
     <li><a href="/menuout">Menu</a></li>
-    <li><a href="/Offers">Offers</a></li>
+    <li><a href="/offers">Offers</a></li>
     {% else %}
     <li><a class="active" href="/">Home</a></li>
     <li><a href="/menu">Menu</a></li>
-    <li><a href="/Offers">Offers</a></li>
+    <li><a href="/offers">Offers</a></li>
     <li><a href="/stores">Stores</a></li>
     <li class="right"><a href="/checkout"><img src="/static/Images/checkout.png" alt="checkout"></a></li>
     {% endif %}
