--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -216,3 +216,23 @@ input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focu
 .yourcart {
   text-align: center;
 }
+
+.storecard {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 100%;
+}
+
+.storecard:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.storecontainer {
+  padding: 2px 16px;
+  width: 100%;
+}
+
+.ourstore {
+  width:50%;
+  margin: auto;
+}
