--- a/templates/menuout.html
+++ b/templates/menuout.html
@@ -3,7 +3,7 @@
 <div class="gridmenu">
 {% for item in results%}
 <div class="middleimage">
-   <a href="/pizza/{{item[0]}}"><img src="{{ item[3] }}">
+   <a href="/pizzaout/{{item[0]}}"><img src="{{ item[3] }}">
    
       <a><b>{{item[1]}}</b></a>
     </a>
