--- a/templates/stores.html
+++ b/templates/stores.html
@@ -1,4 +1,24 @@
 {% extends "layout.html" %}
 {% block content %}
-stores
+<div class="ourstore">
+<h2><b>Our Stores</b></h2>
+<div class="storecard">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2893.329129325246!2d172.56692599678954!3d-43.51632889999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d318ad0b47c003f%3A0x4f55b9f655f27e10!2sDomino&#39;s%20Pizza%20Ilam!5e0!3m2!1sen!2snz!4v1718851731272!5m2!1sen!2snz" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<div class="container">
+<h2><b>Pizza Place Ilam <br> Phone:</b> 03 357 0416 <br><b> Adress: </b>207A Waimairi Road, Ilam, Christchurch 8041
+</h2>
+</div>
+</div>
+<br>
+<br>
+<br>
+<div class="storecard">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d92493.55687146576!2d172.50108567088947!3d-43.576891259772694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d31f57e63f33adf%3A0xeadb2826d98044f!2sDomino&#39;s%20Pizza%20Hornby!5e0!3m2!1sen!2snz!4v1718852089347!5m2!1sen!2snz" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div class="container">
+    <h2><b>Pizza Place Hornby <br> Phone:</b> 03 344 5267 <br><b> Adress: </b> Cnr Main South Road, Goulding Avenue, Islington, & 8042
+    </h2>
+    </div>
+    </div>
+</div>
+
 {% endblock %}
