--- a/templates/pizza.html
+++ b/templates/pizza.html
@@ -4,7 +4,7 @@
     <div class="secondgrid">
         <div class="image11">
             <img src="{{ pizza[3] }}">
-           
+            <h4><b>{{ pizza[1] }} - ${{ pizza[2] }}</b></h4>
             <form action="/cart" method="post">
                 <input type="hidden" name="id" value="{{ pizza[0] }}">
                 <input type="hidden" name="name" value="{{ pizza[1] }}">
@@ -23,7 +23,6 @@
 
     <div class="card">
         <div class="cardcontainer">
-            <h4><b>{{ pizza[1] }} - ${{ pizza[2] }}</b></h4>
             <br>
             <br>
             <h3><b>Ingredients:</b></h3>
@@ -41,7 +40,7 @@
                 <div class="yourcart">
                 <h1>Your Cart</h1>
                 {% for item in session['cart'] %}
-                <h3>{{ item[1] }} - Base: {{ item[3] }}</h3>
+                <h3>{{ item[1] }} with {{ item[3] }}</h3>
                 {% endfor %}
                  </div>
             </div>
