--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -131,7 +131,7 @@ input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focu
 /* MENU STYLES */
 .gridmenu {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: auto auto auto auto;
   gap: 20px;
   padding: 20px;
 }
@@ -177,15 +177,20 @@ input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focu
 
 .cardcontainer h4, .cardcontainer h3, .cardcontainer h1 {
   color: #343a40;
+  width: 100%;
+  text-align: center;
 }
 
 .cardcontainer ul {
   list-style: none;
+  text-decoration: none;
   padding: 0;
 }
 
 .cardcontainer ul li {
   padding: 5px 0;
+  text-decoration: none;
+  list-style-type: none
 }
 
 /* STORE STYLES */
@@ -296,11 +301,13 @@ body.error-page {
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   text-align: center;
+  list-style-type: none
 }
 
 .checkout-container h1 {
   color: #333333;
   margin-bottom: 20px;
+  list-style-type: none
 }
 
 .order-items {
@@ -317,6 +324,7 @@ body.error-page {
 
 .checkout-form {
   margin-bottom: 20px;
+  list-style-type: none
 }
 
 .checkout-button, .clear-cart-button button {
