Worked on a few details to finish off sprint 2

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -9,10 +9,10 @@
     <div class="footer-basic">
         <footer> 
             <ul class="list-inline">
-           <!--     <li class="list-inline-item"><a href="/">Home</a></li>
+            <li class="list-inline-item"><a href="/">Home</a></li>
                 <li class="list-inline-item"><a href="/Offers">Offers</a></li>
                 <li class="list-inline-item"><a href="/Menu">Menu</a></li>
-                <li class="list-inline-item"><a href="/Stores">Contact</a></li> -->
+                <li class="list-inline-item"><a href="/Stores">Contact</a></li> 
 
             </ul> 
             <p class="copyright">Danial Ghobrial © 2024</p>
