--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
 
 <form action="/login" method="post">
     <label for="username">Username</label>
-    <input type="text" name="username">
+    <input type="text" maxlength ="25" name="username">
     <label for="password">Password</label>
     <input type="password" name="password">
     <button type="submit">Login</button>
