--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,5 +1,5 @@
 <ul class="topnav">
-    {% if 'user' not in session %}
+    {% if 'user' == None %}
     <li><a class="active" href="/">Home</a></li>
     <li><a href="/menuout">Menu</a></li>
     <li><a href="/offers">Offers</a></li>
