--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,15 +1,21 @@
 {% extends "layout.html" %}
 {% block content %}
-<h1>Signup</h1>
-<!-- A form to login with -->
-<!-- the ACTION is the route we try to post to! -->
-<form action="/signup" method="post">
-    <label for="username">Username</label>
-    <input type="text" maxlength ="25" name="username">
-    <label for="password">Password</label>
-    <input type="password" name="password">
-    <label for="adress">Adress</label>
-    <input type="text" maxlength ="25" name="adress">
-    <button type="submit">Signup</button>
-</form>
+<div class="auth-container">
+    <h1>Signup</h1>
+    <form action="/signup" method="post" class="auth-form">
+        <div class="auth-form-group">
+            <label for="username">Username</label>
+            <input type="text" maxlength="25" name="username" class="auth-form-input" required>
+        </div>
+        <div class="auth-form-group">
+            <label for="password">Password</label>
+            <input type="password" name="password" class="auth-form-input" required>
+        </div>
+        <div class="auth-form-group">
+            <label for="address">Address</label>
+            <input type="text" maxlength="50" name="address" class="auth-form-input" required>
+        </div>
+        <button type="submit" class="auth-form-button">Signup</button>
+    </form>
+</div>
 {% endblock %}
