--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -522,3 +522,22 @@ body.error-page {
 .auth-form-button:hover {
   background-color: #45a049;
 }
+
+.flash-message {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: red;
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  text-align: center;
+  z-index: 1000;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.flash-message.show {
+  opacity: 1;
+}
